When navigating back/forward in the DolphinPart inside Konqueror, remember

1. the current item,
2. the scroll position of the view, and
3. the expansion state of the details view.

Before 3. can be implemented in Dolphin itself, some changes in
KUrlNavigator are required.

This fix will be in KDE 4.4.

BUG: 193549
BUG: 198073
BUG: 213137

svn path=/trunk/KDE/kdebase/apps/; revision=1049164