src/dolphinviewcontainer.cpp
@@ -314,7 +314,6 @@ void DolphinViewContainer::slotDirListerCompleted()
     } else {
         updateStatusBar();
     }
-    QMetaObject::invokeMethod(this, "restoreContentsPos", Qt::QueuedConnection);
 
     // Enable the 'File'->'Create New...' menu only if the directory
     // supports writing.
@@ -387,15 +386,9 @@ void DolphinViewContainer::openContextMenu(const KFileItem& item,
 
 void DolphinViewContainer::saveContentsPos(int x, int y)
 {
+    // TODO: If DolphinViewContainer uses DolphinView::saveState(...) to save the
+    // view state in KDE 4.5, this funciton can be removed.
     m_urlNavigator->savePosition(x, y);
-}
-
-void DolphinViewContainer::restoreContentsPos()
-{
-    if (!url().isEmpty()) {
-        const QPoint pos = m_urlNavigator->savedPosition();
-        m_view->setContentsPosition(pos.x(), pos.y());
-    }
 }
 
 void DolphinViewContainer::activate()
@@ -484,6 +477,8 @@ void DolphinViewContainer::slotHistoryChanged()
         // the previous directory as active item:
         const KUrl url = m_urlNavigator->historyUrl(index - 1);
         m_view->activateItem(url);
+        QPoint pos = m_urlNavigator->savedPosition();
+        m_view->setRestoredContentsPosition(pos);
     }
 }
 
